<resources>
    <string name="recovery_center">Recovery Center</string>
    <string name="settingTitle">Preferences</string>
    <string name="recoveryShortcuts">Recover Floating Shortcuts</string>
    <string name="overlayPermission">Turn On Permission, Please!</string>
    <string name="bindDesc">Swipe Down To See More Options</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="dynamic">Dynamic</string>
    <string name="leftEdge">Left Edge</string>
    <string name="rightEdge">Right Edge</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="addRecovery">Add To Recovery</string>
    <string name="addFolder">New Folder</string>
    <string name="removeRecovery">Remove From Recovery</string>
    <string name="index_item">S</string>
    <string name="not_install">THE APP IS NOT AVAILABLE</string>
    <string name="updating_info">Updating Applications Information</string>
    <string name="supportCategory">Support Center</string>
    <string name="supportTitle">Help &amp; Feedback</string>
    <string name="privacyTitle">Privacy Policy</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="alphaTitle">Thanks for Joining Beta Program. Always Appreciate your Feedback!</string>
    <string name="signinTitle">Welcome to Geeks Empire!</string>
    <string name="signinMessage">Thanks for Joining to Our #FloatingMultitasking Community.</string>
    <string name="signinFinished"> ⚡ Become Master Of Multitasking ⚡ </string>
    <string name="permTitle">
        <![CDATA[
            <b>Permissions Info</b>, Be Patient!
        ]]>
    </string>
    <string name="permDesc">
        <![CDATA[
            <b>Hi</b>&#8230; &#9786;<br/>I need your Permission to create <b>Floating Applications</b>.
            Please Grant permission by Enabling the Switch.<br/>
        ]]>
    </string>
    <string name="split_service_desc">
        Split It | This permission gives me the ability to create Multi-Window &amp; Open Apps in Split Screen Simultaneously
        \n
        \n
        ℹ️ Accessibility Service Permission Have Used To Create Multi-Windows and Open Applications in Split Screen Simultaneously to Increase Productivity and Multitasking.
    </string>
    <string name="split_service_summary">
        Split It | This Permission Gives me the Ability to Create Multi-Window &amp; Open Apps in Split Screen Simultaneously
    </string>
    <string name="splitIt">Split It</string>
    <string name="splitItNotice">Select An Application To Continue…</string>
    <string name="observeDesc">
        <![CDATA[
                <br/>
                I need Accessibility Service to create Multi-Window Mode 🗔 to open pair of applications in Split Screen.
                <small><br/>The Core Purpose Of Requiring This Permission Is Opening Two Applications Together To Increase Productivity and Multitasking.
                <br/>⚠ No Data Read Or Collect ⚠
                <br/><br/>
                ℹ️ Accessibility Service Permission Have Used To Create Multi-Windows & Open Applications in Split Screen Simultaneously to Increase Productivity & Multitasking.</small>
        ]]>
    </string>
    <string name="freeFormInfo">
        <![CDATA[
                <small>
                Follow This Instructions to Enable System Settings<br/>
                1️⃣️ Go to System Setting (<b>About</b> Section) <br/>
                2️⃣ & Enable <b>Developer Options</b> by Clicking Few Times on <b>Build Number</b><br/>
                3️⃣ Go to System Setting (Developer Options)<br/>
                4️⃣ Scroll Down to Find & Enable <b>Force Activities to Be Resizable</b><br/>
                5️⃣ Now Connect Your Device to Your Computer<br/>
                6️⃣ Open Terminal (Command Line) & Type these Commands<br/>
                7️⃣ <b>adb shell</b> <br/>
                8️⃣️ <b>settings put global enable_freeform_support 1</b> && <b>exit</b><br/>
                ➡️ If On Android P: <b>adb shell settings put global hidden_api_policy_p_apps 1</b> && <b>exit</b><br/>
                9️⃣ <b>adb reboot</b><br/>
                1️⃣0️⃣ Come Back Here ⚙ & <b>Turn ON Floating Multitasking</b>
                <br/><br/>
                <b>ℹ️ <font color=#c3ffa6>Information</font> ℹ️ </font><br/></b>
                ⏺ You Can <b>Resize Apps Window</b> in FreeForm (Touch Edges of Window & Move It)<br/>
                ⏺ If You Are Interested in This Feature & Don\'t Know What to Do, Feel Free to Contact Me via <b>Support Center</b> 👍 😉
                </small>
        ]]>
    </string>
    <string name="retry">Retry Now</string>
    <string name="observeSum">Android 7.0 (Nougat) +</string>
    <string name="grant">Grant Permission</string>
    <string name="agree">Agreed</string>
    <string name="skipNow">Not Now</string>
    <string name="read">Read More</string>
    <string name="grantFreeForm">Done</string>
    <string name="confirm">Confirm</string>
    <string name="support">Contact Support</string>
    <string name="ui_app">App Interface</string>
    <string name="ui_floating">Floating Interface</string>
    <string name="pref_floating">Floating Preferences</string>
    <string name="advance">Advanced Features</string>
    <string name="wait">Please, Be Patient!</string>
    <string name="stable">Control Panel</string>
    <string name="smartCategory">Smart Features</string>
    <string name="smartTitle">Intelligent Services</string>
    <string name="floatingSearch">Floating Search</string>
    <string name="smartSummary">Let Me Know…</string>
    <string name="smartPermission">
        <![CDATA[
            <br/>
            This Permission Allows Me to Get List of <b>Frequently Used Application</b> to Set Quick Bar.<br/><br/>
            Also, It is Essential for<br/>
            1. <b>🔄 Remote Recovery of Floating Shortcuts/Folders</b> to Recognize Command…<br/>
            2. <b>🆗 Google! Open Floating Multitasking</b><br/>
            3. <b>🕐 Optimizing Floating Splash</b><br/>
        ]]>
    </string>
    <string name="observeTitle">Interactions Observer</string>
    <string name="boot">Remote Recovery</string>
    <string name="bootPermission">
        <![CDATA[
            <br/>
            <big>Recover Floating Shortcuts/Folders When</big>…<br/>
            1. <b>Saying \'🆗 Google Open Floating Multitasking\'</b><br/>
            2. <b>Using Popup AppShortcuts</b> | Press & Hold ⏺ on App Shortcut on Home Screen (Android 7.1.1 & Higher)<br/>
            <br/>
        ]]>
    </string>
    <string name="notificationEmoji">🔔</string>
    <string name="notificationTitle">Floating Notification</string>
    <string name="notificationSummary">Notification Dot on Floating Shortcuts/Folders</string>
    <string name="notificationDesc">
        <![CDATA[
            <br/>
            This Permission Allows Me to Get Content of <b>Unread Notification</b> 🔔<br/>
            1️⃣ to Add a <b>Notification Dot</b> on Floating Shortcuts/Folders<br/>
            2️⃣ & Show <b>Notification Content</b> from Floating Shortcuts/Folders.
            <br/>
        ]]>
    </string>
    <string name="createShortcut">Create Home Screen Shortcuts</string>
    <string name="deleteAlias">Remove App Drawer Shortcuts</string>
    <string name="floatingFolders">Floating Folders</string>
    <string name="floatingWidget">Floating Widgets</string>
    <string name="folderHint">Folders</string>
    <string name="widgetHint">Widgets</string>
    <string name="widgetLabelHint">Type A Widget Label</string>
    <string name="widgetPickerTitle">
        <![CDATA[
            <small>Choose Widgets To Configure</small><br/>
            <big>Press & Hold</big>
        ]]>
    </string>
    <string name="floatingHint">Shortcuts</string>
    <string name="recover_apps">Recover Floating Shortcuts</string>
    <string name="recover_folder">Recover Floating Folders</string>
    <string name="recover_widgets">Recover Floating Widgets</string>
    <string name="reallocatingWidgets"> 🔁 Reconfiguring… </string>
    <string name="reconfiguringWidgets"> Reconfiguring… </string>
    <string name="folderDescription">Enter A Name</string>
    <string name="colortext">Color Theme</string>
    <string name="themeTrans">Transparent Theme</string>
    <string name="autotrans">Floating Transparency</string>
    <string name="delayPressHold">Popup Menu Delay</string>
    <string name="flingSensitivityTitle">Fling Sensitivity</string>
    <string name="flingSensitivitySummary">Throw Floating Shortcuts/Folders Around</string>
    <string name="delayPressHoldExtraInfo">Press &amp; Hold on Icon to Test the Delay</string>
    <string name="revertDefault">Set To Recommended Value</string>
    <string name="splashTitle">Floating Splash</string>
    <string name="splashDesc">Waiting Screen for Opening Apps</string>
    <string name="shortsizepref">Floating Size</string>
    <string name="stick">Sticky Edge</string>
    <string name="shapesTitle">Floating Shapes</string>
    <string name="shapedDesc">Set Shape to…</string>
    <string name="droplet">Droplet</string>
    <string name="circle">Circle</string>
    <string name="square">Square</string>
    <string name="squircle">Squircle</string>
    <string name="noshape">No Shape</string>
    <string name="iconPack">Packages of Icons</string>
    <string name="defaultTheme">Set Default Theme of Icons</string>
    <string name="customIconTitle">Theme of Icons</string>
    <string name="shortcuts">Floating Shortcuts</string>
    <string name="boot_warning">All</string>
    <string name="boot_none">None</string>
    <string name="remove_all_floatings">REMOVE ALL</string>
    <string name="remove_all">❌ Remove All</string>
    <string name="recover_all">✔️ Recover All</string>
    <string name="moveEdgeLeft">⬅️️ Move To Edge</string>
    <string name="moveEdgeRight">➡️️️ Move To Edge</string>
    <string name="backToScreenLeft">➡️️️ Back To Screen</string>
    <string name="backToScreenRight">⬅️️ Back To Screen️</string>
    <string name="pin">Pin Shortcut</string>
    <string name="unpin">Unpin Shortcut</string>
    <string name="close">Minimize It</string>
    <string name="remove">Remove Shortcut</string>
    <string name="pin_folder">Pin Folder</string>
    <string name="unpin_folder">Unpin Folder</string>
    <string name="remove_folder">Remove</string>
    <string name="floatIt">Floating Multitasking</string>
    <string name="deleteText">Delete</string>
    <string name="edit_folder">Edit: </string>
    <string name="freeFormTitle">Float It</string>
    <string name="freeFormDesc">Always Open All Apps in Floating View (FreeForm)</string>
    <string name="liteTitle">Lite Preferences</string>
    <string name="liteSummary">Set Preferences to Minimum for Better Performance</string>
    <string name="liteDesc">
        <![CDATA[
            Set Preferences to Minimum for Better Performance ⚡ <br/>
            (<small>Highly Recommended for Mid-Range &amp; Low-End Smartphones</small>)
        ]]>
    </string>
    <string name="inAppUpdateDescription">An Update Has Just Been Installed</string>
    <string name="inAppUpdateAction">
        <![CDATA[
            Complete It!
        ]]>
    </string>
    <string name="searchHint">Type To Search</string>
    <string name="searchFolderHint">
        <![CDATA[
            <small>| Folder</small>
        ]]>
    </string>
    <string name="searchWidgetHint">
        <![CDATA[
            <small>| Widget</small>
        ]]>
    </string>
    <string name="securityServices">Security Services</string>
    <string name="changePin">Pin Password</string>
    <string name="changePinSummary">Create Or Edit Pin Password</string>
    <string name="passwordError">Password Error ⚠</string>
</resources>