<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2020 By Geeks Empire.
  ~
  ~ Created by Elias Fazel on 3/25/20 2:16 PM
  ~ Last modified 3/25/20 1:56 PM
  ~
  ~ Licensed Under MIT License.
  ~ https://opensource.org/licenses/MIT
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:summary=" " />
    <PreferenceCategory android:summary=" " />

    <PreferenceCategory android:title="@string/securityServices" android:summary=" ">
        <Preference
            android:key="pinPassword"
            android:icon="@drawable/draw_security_preferences"
            android:title="@string/changePin"
            android:summary="@string/changePinSummary" />
    </PreferenceCategory>

    <PreferenceCategory android:summary=" " />

    <PreferenceCategory android:title="@string/smartCategory" android:summary=" ">
        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/draw_smart"
            android:key="smart"
            android:summary="@string/smartSummary"
            android:title="@string/smartTitle"/>
        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/draw_smart"
            android:key="observe"
            android:title="@string/observeTitle"/>
        <Preference
            android:icon="@drawable/draw_smart"
            android:key="boot"
            android:title="@string/boot"/>
    </PreferenceCategory>

    <PreferenceCategory android:summary=" " />

    <PreferenceCategory android:title="@string/pref_floating" android:summary=" ">
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/STICK"
            android:entryValues="@array/STICKValues"
            android:icon="@drawable/draw_pref"
            android:key="stick"
            android:title="@string/stick"/>
        <Preference
            android:defaultValue="false"
            android:icon="@drawable/draw_pref"
            android:key="delayPressHold"
            android:title="@string/delayPressHold"/>
        <Preference
            android:defaultValue="false"
            android:icon="@drawable/draw_pref"
            android:key="flingSensitivity"
            android:title="@string/flingSensitivityTitle"
            android:summary="@string/flingSensitivitySummary" />
        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/draw_pref"
            android:key="notification"
            android:summary="@string/notificationSummary"
            android:title="@string/notificationTitle"/>
    </PreferenceCategory>

    <PreferenceCategory android:summary=" " />

    <PreferenceCategory android:title="@string/ui_floating" android:summary=" ">
        <Preference
            android:icon="@drawable/draw_pref"
            android:key="shapes"
            android:title="@string/shapesTitle"/>
        <Preference
            android:defaultValue="2"
            android:icon="@drawable/draw_pref"
            android:key="sizes"
            android:title="@string/shortsizepref"/>
        <Preference
            android:icon="@drawable/draw_pref"
            android:key="hide"
            android:title="@string/autotrans"/>
        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/draw_pref"
            android:key="floatingSplash"
            android:summary="@string/splashDesc"
            android:title="@string/splashTitle"/>
    </PreferenceCategory>

    <PreferenceCategory android:summary=" " />

    <PreferenceCategory android:title="@string/ui_app" android:summary=" ">
        <ListPreference
            android:defaultValue="2"
            android:entries="@array/AppThemes"
            android:entryValues="@array/AppThemesValues"
            android:icon="@drawable/draw_pref"
            android:key="themeColor"
            android:title="@string/colortext"/>
    </PreferenceCategory>

    <PreferenceCategory android:summary=" " />

    <PreferenceCategory
        android:key="advanced"
        android:title="@string/advance" android:summary=" ">
        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/draw_floatit"
            android:key="freeForm"
            android:summary="@string/freeFormDesc"
            android:title="@string/freeFormTitle"/>
        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/draw_pref"
            android:key="stable"
            android:title="@string/stable"/>
        <Preference
            android:icon="@drawable/draw_pref"
            android:key="lite"
            android:summary="@string/liteSummary"
            android:title="@string/liteTitle"/>
    </PreferenceCategory>

    <PreferenceCategory android:summary=" " />

    <PreferenceCategory android:title="@string/supportCategory" android:summary=" ">
        <Preference
            android:icon="@drawable/ic_launcher_layer"
            android:key="whatsnew"
            android:title="@string/whatsnew"/>
        <Preference
            android:icon="@drawable/draw_support"
            android:key="support"
            android:title="@string/supportTitle"/>
        <Preference
            android:icon="@drawable/policy"
            android:key="privacy"
            android:title="@string/privacyTitle"/>
    </PreferenceCategory>

    <PreferenceCategory android:summary=" " />

    <PreferenceCategory android:key="adTitle" android:title="@string/geeksempire" android:summary=" ">
        <Preference
            android:icon="@drawable/arwen_ai_icon"
            android:key="app"
            android:summary="@string/adAppSummary"
            android:title="@string/adApp"/>
    </PreferenceCategory>

    <PreferenceCategory android:summary=" " />
    <PreferenceCategory android:summary=" " />

</PreferenceScreen>
